; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/mods/extr_pybuart.c_uart_tx_strn.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/mods/extr_pybuart.c_uart_tx_strn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uart_tx_strn(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i8*, i8** %6, align 8
  %10 = load i32, i32* %7, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds i8, i8* %9, i64 %11
  store i8* %12, i8** %8, align 8
  br label %13

13:                                               ; preds = %25, %3
  %14 = load i8*, i8** %6, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = icmp ult i8* %14, %15
  br i1 %16, label %17, label %28

17:                                               ; preds = %13
  %18 = load i32*, i32** %5, align 8
  %19 = load i8*, i8** %6, align 8
  %20 = load i8, i8* %19, align 1
  %21 = call i32 @uart_tx_char(i32* %18, i8 signext %20)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %24, label %23

23:                                               ; preds = %17
  store i32 0, i32* %4, align 4
  br label %29

24:                                               ; preds = %17
  br label %25

25:                                               ; preds = %24
  %26 = load i8*, i8** %6, align 8
  %27 = getelementptr inbounds i8, i8* %26, i32 1
  store i8* %27, i8** %6, align 8
  br label %13

28:                                               ; preds = %13
  store i32 1, i32* %4, align 4
  br label %29

29:                                               ; preds = %28, %23
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local i32 @uart_tx_char(i32*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
